--- a/ClientApp/src/app/projects/projects.component.css
+++ b/ClientApp/src/app/projects/projects.component.css
@@ -1,4 +1,23 @@
 
+#projects {
+  margin-top: 2rem;
+}
+
+.height-100{
+    height:100%;
+}
+
+.row-eq-height {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+.card {
+  width: 18rem;
+  cursor: pointer;
+  background-color: #fff3 !important;
+}
 .wrapper {
   margin: 5em auto;
   max-width: 1000px;
